--- a/api-reference/auth.mdx
+++ b/api-reference/auth.mdx
@@ -7,7 +7,7 @@ openapi: "/api-reference/oapi-schemas/auth-schema.json POST /v1beta1/login"
 
 # API Authentication
 
-EP3 uses **JWT** or **OAuth 2.0** tokens to authenticate and authorize API access.
+The exchange uses **JWT** or **OAuth 2.0** tokens to authenticate and authorize API access.
 
 To interact with the API, you must first obtain an **Access Token** by authenticating with your username and password.  
 Once you have the token, include it in the `Authorization` header of all requests.
