FIX API unedited files
unedited files straight from the canmerra

--- a/index.mdx
+++ b/index.mdx
@@ -10,7 +10,7 @@ This guide provides a comprehensive overview of Polymarket US’s platform funct
 <Columns cols={2}>
     <Card
     title="API Key Management"
-    icon="palette"
+    icon="key"
     href="/api-reference/auth"
   >
     Learn how to get and use an API Key.
@@ -18,14 +18,14 @@ This guide provides a comprehensive overview of Polymarket US’s platform funct
   
   <Card
     title="Rate Limits"
-    icon="palette"
-    href="api-reference/introduction"
+    icon="gauge"
+    href="getting-started/rate-limits"
   >
     API Rate Limits for various endpoints.
   </Card>
     <Card
     title="Changelog"
-    icon="palette"
+    icon="list"
     href="/changelog"
   >
     Keep up with API changes.
