Exclusions and New Pages
Added the new pages and cleaned up rate limits, and welcome page. Still need to fix formatting; and remove qcex references

--- a/api-reference/fix-api/ep3-fix-api-reference-data.mdx
+++ b/api-reference/fix-api/ep3-fix-api-reference-data.mdx
@@ -1,6 +1,8 @@
-Participants may download a list of the instruments available (or reference data about them) to trade on the EP3 Platform by submitting a SecurityListRequest [x] message.
+---
+title: "FIX API Reference Data"
+---
 
-# Reference Data
+Participants may download a list of the instruments available (or reference data about them) to trade on the EP3 Platform by submitting a SecurityListRequest [x] message.
 
 ## Table 23: SecurityListRequest (x) message
 
