--- a/api-reference/fix-api/ep3-fix-appendix-a-fix-data-types.mdx
+++ b/api-reference/fix-api/ep3-fix-appendix-a-fix-data-types.mdx
@@ -1,3 +1,7 @@
+---
+title: "FIX Data Types"
+---
+
 | Type Name | Data Type | Description |
 |-----------|-----------|-------------|
 | int | Signed integer. Zeros permitted. | Sequence of digits without commas or decimals and optional sign character (ASCII characters - and 0 - 9 ). The sign character utilizes one byte (i.e. positive int is 99999 while negative int is -99999). Note that int values may contain leading zeros (e.g. 00023 = 23). |
