--- a/api-reference/fix-api/ep3-fix-market-data.mdx
+++ b/api-reference/fix-api/ep3-fix-market-data.mdx
@@ -1,4 +1,6 @@
-# Market Data
+---
+title: "FIX Market Data"
+---
 
 The market data sessions for the EP3 Platform are available by a second, separate FIX gateway; they are not accessible via the order-entry session.
 
