--- a/api-reference/fix-api/ep3-fix-overview.mdx
+++ b/api-reference/fix-api/ep3-fix-overview.mdx
@@ -1,14 +1,12 @@
-## <a id="introduction" />Introduction
+---
+title: "FIX Overview"
+---
 
-The purpose of this document is to outline the trading functionality available on EP3 via a FIX trading protocol.  For the EP3 Drop-Copy FIX specification, please contact [support@connamara.tech.](mailto:support@connamara.tech.)
+The purpose of this document is to outline the trading functionality available via a FIX trading protocol.  For the Drop-Copy FIX specification, please contact [support@qcex.com](mailto:support@qcex.com)
 
-## Platform Overview
+## Platform Connectivity & Overview
 
-Connamara Technologies is the company behind EP3, the asset-agnostic exchange platform conceived and incubated at Connamara Systems, a provider of capital market trading solutions since 1998. EP3's platform provides solutions for exchange operations, order matching and execution, market surveillance and settlement. EP3 creates performant and scalable marketplaces that enable an exchange to run continuously with virtually no downtime. Connamara Technologies is dedicated to developing innovative technology that serves the needs of tomorrow’s exchanges.
-
-## Platform Network Connectivity
-
-Static IP addresses of FIX engines must be white-listed in EP3. Contact [support@connamara.tech](mailto:support@connamara.tech) to request this and Sender/TargetCompID.
+Static IP addresses of FIX engines must be white-listed in EP3. Contact [support@qcex.com](mailto:support@qcex.com) to request this and Sender/TargetCompID.
 
 ## Firm, User and Account Identifiers
 
