--- a/index.mdx
+++ b/index.mdx
@@ -1,15 +1,21 @@
 ---
-title: "Introduction"
+title: "Welcome"
 mode: "center"
 ---
-
 
 This guide provides a comprehensive overview of Polymarket US’s platform functionality, market structure, and API architecture. Please note that this documentation is specific to Polymarket US, which operates independently and differently from the global Polymarket platform.
 
 
 <Columns cols={2}>
     <Card
-    title="API Key Management"
+    title="Request Access"
+    icon="hand"
+    href="/getting-started/getting-access"
+  >
+    Learn how to get and use an API Key.
+  </Card>
+    <Card
+    title="REST API Key Management"
     icon="key"
     href="/api-reference/auth"
   >
