Remove EP3 References

--- a/api-reference/fix-api/ep3-fix-component-definitions.mdx
+++ b/api-reference/fix-api/ep3-fix-component-definitions.mdx
@@ -4,7 +4,7 @@ title: "FIX Components"
 
 ## Standard Header & Trailer
 
-Each FIX message sent to and received from the EP3 platform must start and end with a message header and trailer components.
+Each FIX message sent to and received from the PMX platform must start and end with a message header and trailer components.
 
 ## Standard Header Component
 
