--- a/api-reference/fix-api/ep3-fix-order-entry-and-matching.mdx
+++ b/api-reference/fix-api/ep3-fix-order-entry-and-matching.mdx
@@ -13,7 +13,7 @@ The Exchange operates as a continuous central limit order book to match orders w
 
 ## Self-Match Prevention
 
-The EP3 platform offers self-match prevention logic which can be enabled either at the FIX session level (automatically applied to all orders entered through a session), or on a per-order basis using the SelfMatchPreventionID (7928) and SelfMatchPreventionInstruction (8000) tags.
+The PMX platform offers self-match prevention logic which can be enabled either at the FIX session level (automatically applied to all orders entered through a session), or on a per-order basis using the SelfMatchPreventionID (7928) and SelfMatchPreventionInstruction (8000) tags.
 
 This instruction will automatically cancel one or both orders (without execution) which would potentially be involved in a self-match. The options are:
 
@@ -24,13 +24,13 @@ See Self-Match Prevention for further details and examples of this behavior. Con
 
 ## Tick Sizes / Minimum Quantity Increments
 
-Each instrument on the EP3 Platform has a minimum price increment (“tick size”) and minimum quantity increment (“lot size”). These instrument-level settings are indicated in the SecurityList \[y] message in the MinPriceIncrement (969) and MinTradeVol (562) fields respectively.
+Each instrument on the PMX Platform has a minimum price increment (“tick size”) and minimum quantity increment (“lot size”). These instrument-level settings are indicated in the SecurityList \[y] message in the MinPriceIncrement (969) and MinTradeVol (562) fields respectively.
 
 Order with a price and/or quantity which do not comply with these increments will be rejected using BusinessMessageReject \[j] with reason 13 = Incorrect quantity or 18 = Invalid price increment (tick size).
 
 ## Order Types, Time In Force & Execution Instructions
 
-The intended behavior of orders entering the EP3 Platform is controlled using a combination of OrderType (40), TimeInForce (59) and ExecInst (18) fields. These are explained in turn below.
+The intended behavior of orders entering the PMX Platform is controlled using a combination of OrderType (40), TimeInForce (59) and ExecInst (18) fields. These are explained in turn below.
 
 ### Table 12: OrdType (40) definitions
 
@@ -68,7 +68,7 @@ Note that MinQty (110) only limits order behavior as it enters the order book; i
 | ALL OR NONE                                | G     | Require that either (a) all of the order quantity is filled immediately, or (b) none of it should trade even partially. Marking an order with this ExecInst instruction is functionally-equivalent to setting Time In Force to FOK.                                                                                                                                                                                                                                      |
 | IGNORE PRICE VALIDITY CHECKS               | c     | Exempt this order from absolute price limits, relative price limits, order size limits, and total notional limits. Only allowed for market-to-limit orders to sell. This flag exists to support quickly liquidating a position.                                                                                                                                                                                                                                          |
 | PARTICIPATE DON’T INITIATE                 | 6     | Require that the order is only accepted if it would NOT immediately match. This guarantees that the order will always be the passive side in any trades.  An order that would result in a match would be rejected with reason “Order may participate but not initiate in the market”. Should not be used in combination with MinQty (110) or conditions which require immediate executions - ExecInst (18) = G (All or None), or TimeInForce (59) = 3 or 4 (IOC or FOK). |
-| SINGLE EXECUTION REQUESTED FOR BLOCK TRADE | j     | A flag for submitting block trades to EP3.                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| SINGLE EXECUTION REQUESTED FOR BLOCK TRADE | j     | A flag for submitting block trades to PMX.                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | BEST LIMIT                                 | R     | A flag that if set indicates that the price of a limit order shall be set to the price at the top of the book on the same side as this order.                                                                                                                                                                                                                                                                                                                            |
 | IMMEDIATELY EXECUTABLE LIMIT               | T     | A flag that if set indicates that the price of a limit order shall be set to the price at the top of the book on the opposing side as this order, thus able to immediately match.                                                                                                                                                                                                                                                                                        |
 
@@ -76,7 +76,7 @@ Note that MinQty (110) only limits order behavior as it enters the order book; i
 
 ## Order Entry
 
-Participants may place orders into the EP3 platform order book to buy or sell securities using a NewOrderSingle \[D] message.
+Participants may place orders into the PMX platform order book to buy or sell securities using a NewOrderSingle \[D] message.
 
 ### Table 15: NewOrderSingle (D) message
 
@@ -139,11 +139,11 @@ All orders entering the Platform are first either accepted or rejected using an 
 | 6                | AvgPx                          | Y     | Price     | Volume-weighted average price of all trades against this order. May be zero for unexecuted orders.                                                                                                                                                                                                                                                                                                                                                                                                    |
 | 11               | ClOrdID                        | Y     | String    | The participant-assigned ClOrdID value as sent on the last order action message form the Participant (new order, amendment or cancel).                                                                                                                                                                                                                                                                                                                                                                |
 | 14               | CumQty                         | Y     | Qty       | Cumulative quantity so far for this order. May be zero for unexecuted orders.                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| 17               | ExecID                         | Y     | String    | Unique identifier for the Execution Report as assigned by EP3. Typically a 13-character alphanumeric string.                                                                                                                                                                                                                                                                                                                                                                                          |
+| 17               | ExecID                         | Y     | String    | Unique identifier for the Execution Report as assigned by PMX. Typically a 13-character alphanumeric string.                                                                                                                                                                                                                                                                                                                                                                                          |
 | 22               | SecurityIDSource               | Y     | String    | Identifies source of SecurityID (48) value.\<br>8 = Exchange symbol                                                                                                                                                                                                                                                                                                                                                                                                                                   |
 | 31               | LastPx                         | Y     | Price     | Price of this last fill. Will be zero for messages not relating to a trade.                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | 32               | LastQty                        | Y     | Qty       | Quantity traded on this last fill. Will be zero for messages not relating to a trade.                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| 37               | OrderID                        | Y     | String    | Unique identifier for Order as assigned by EP3. Typically a 13-character alphanumeric string.                                                                                                                                                                                                                                                                                                                                                                                                         |
+| 37               | OrderID                        | Y     | String    | Unique identifier for Order as assigned by PMX. Typically a 13-character alphanumeric string.                                                                                                                                                                                                                                                                                                                                                                                                         |
 | 38               | OrderQty                       | Y     | Qty       | Total order quantity (amended as necessary)                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | 39               | OrdStatus                      | Y     | char      | The latest status of the order after any changes have been applied.\<br>0 = New\<br>1 = Partially filled\<br>2 = Fully filled\<br>4 = Canceled\<br>8 = Rejected\<br>C = Expired                                                                                                                                                                                                                                                                                                                       |
 | 40               | OrdType                        | Y     | char      | The type of order.\<br>2 = Limit\<br>3 = Stop\<br>4 = Stop Limit\<br>K = Market with left over as limit                                                                                                                                                                                                                                                                                                                                                                                               |
@@ -159,7 +159,7 @@ All orders entering the Platform are first either accepted or rejected using an 
 | 103              | OrdRejReason                   | N     | int       | Rejection reason (where OrdStatus = Rejected)\<br>0 = Broker/Exchange Option\<br>1 = Unknown symbol\<br>2 = Exchange closed (maintenance)\<br>3 = Order exceeds limit (price validation)\<br>5 = Unknown order\<br>6 = Duplicate order (ClOrdID)\<br>11 = Unsupported order characteristic\<br>12 = Surveillance option\<br>13 = Incorrect quantity (lot size)\<br>15 = Unknown account (tag 1)\<br>16 = Price exceeds current price band\<br>18 = Invalid price increment (tick size)\<br>99 = Other |
 | 119              | SettlCurrAmt                   | N     | Amt       | Present on trades only. Total amount of this last fill. Equal to LastPx (31) x LastQty (32)                                                                                                                                                                                                                                                                                                                                                                                                           |
 | 126              | ExpireTime                     | N     | UTCTime   | Order expiry date (amended as necessary).                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
-| 150              | ExecType                       | Y     | char      | The reason that the EP3 Platform sent this Execution Report.\<br>0 = New\<br>4 = Canceled\<br>5 = Replaced\<br>8 = Rejected\<br>C = Expired\<br>F = Trade                                                                                                                                                                                                                                                                                                                                             |
+| 150              | ExecType                       | Y     | char      | The reason that the PMX Platform sent this Execution Report.\<br>0 = New\<br>4 = Canceled\<br>5 = Replaced\<br>8 = Rejected\<br>C = Expired\<br>F = Trade                                                                                                                                                                                                                                                                                                                                             |
 | 151              | LeavesQty                      | Y     | Qty       | Remaining, unexecuted quantity left on the order. May be zero for fully filled orders.                                                                                                                                                                                                                                                                                                                                                                                                                |
 | 381              | GrossTradeAmt                  | N     | Amt       | Present on orders which have been filled. Total amount traded across all fills for this order. Equal to AvgPx (6) x CumQty (38).                                                                                                                                                                                                                                                                                                                                                                      |
 | 581              | AccountType                    | N     | Int       | 1=CUSTOMER\<br>2=NON\_CUSTOMER\<br>3=HOUSE\_TRADER\<br>4=FLOOR\_TRADER\<br>6=NON\_CUSTOMER\_CROSS\_MARGINED\<br>7=HOUSE\_TRADER\_CROSS\_MARGINED\<br>8=JOINT\_BACK\_OFFICE\<br>9=EQUITIES\_SPECIALIST\<br>10=OPTIONS\_MARKET\_MAKER\<br>11=OPTIONS\_FIRM\_ACCOUNT\<br>12=AGGREGATED\_CUSTOMER\_AND\_NON\_CUSTOMER\<br>13=AGGREGATED\_MULTIPLE\_CUSTOMERS\<br>14=LIQUIDITY\_PROVIDER\<br>15=OPERATING\<br>16=CLEARING\_FUND\<br>17=FUTURES\_MARKET\_MAKER                                              |
@@ -286,11 +286,11 @@ Example 14: ExecutionReport immediately rejecting incoming order as a result of 
 
 Participants may request to amend any open order using the OrderCancelReplaceRequest \[G] message.
 
-In this case, the order to be amended is identified using the last-entered ClOrdID (11) value relating to the order into the OrigClOrdID (41) field. Following FIX convention, this modification message will also contain a fresh ClOrdID (11) value which can then be used by the Participant to further modify the order if required. Note that the EP3 Platform does not require the entry of the (platform-generated) OrderID (37) in order to amend the order.
+In this case, the order to be amended is identified using the last-entered ClOrdID (11) value relating to the order into the OrigClOrdID (41) field. Following FIX convention, this modification message will also contain a fresh ClOrdID (11) value which can then be used by the Participant to further modify the order if required. Note that the PMX Platform does not require the entry of the (platform-generated) OrderID (37) in order to amend the order.
 
 ### Table 17: OrderCancelReplaceRequest (G) message
 
-If the order has been successfully modified, the EP3 Platform will respond with an ExecutionReport \[8] message which echoes many of the key (updated) order attributes, and with ExecType (150) = 5 (replaced).
+If the order has been successfully modified, the PMX Platform will respond with an ExecutionReport \[8] message which echoes many of the key (updated) order attributes, and with ExecType (150) = 5 (replaced).
 
 Note that a modification which increases the remaining order quantity will lose its time priority at a price level. Any modifications to reduce order quantity (or other non-price modifications which do not change quantity) will not cause the order to lose their order book priority.
 
@@ -305,7 +305,7 @@ Note that a modification which increases the remaining order quantity will lose 
 Example 15: Request to replace an existing order\
 8=FIXT.1.1 | 9=127 | 35=G | 49=SENDER | 56=TARGET| 34=66 | 52=20240517-19:17:08 | 50=SENDERSUB | 41=1182560827 | 11=1182560836 | 55=GOOG | 54=2 | 40=2 | 38=500 | 44=1000 | 10=061 |
 
-If the order can not be modified for any reason (for example if the requested price / order size are not acceptable, or the order has already expired), then the EP3 Platform will respond with an OrderCancelReject \[9] message indicating the reason.
+If the order can not be modified for any reason (for example if the requested price / order size are not acceptable, or the order has already expired), then the PMX Platform will respond with an OrderCancelReject \[9] message indicating the reason.
 
 **Where the amendment has been rejected, the existing order remains working with prior attributes.**
 
@@ -319,7 +319,7 @@ Participants may request to cancel any open order using the OrderCancelRequest \
 
 As with order amend requests, the order to be canceled is identified using the last-entered ClOrdID (11) value relating to the order into the OrigClOrdID (41) field.
 
-If the order has been canceled, the EP3 Platform will respond with an ExecutionReport \[8] message which echoes many of the key (updated) order attributes, and with ExecType (150) = 4 (canceled).
+If the order has been canceled, the PMX Platform will respond with an ExecutionReport \[8] message which echoes many of the key (updated) order attributes, and with ExecType (150) = 4 (canceled).
 
 ### Table 18: OrderCancelRequest (F) message
 
@@ -333,7 +333,7 @@ If the order has been canceled, the EP3 Platform will respond with an ExecutionR
 
 <br />
 
-If the request to cancel the order passed validation, then the EP3 Platform will acknowledge the order cancellation with an ExecutionReport \[8] message indicating OrdStatus (39) = 4 (canceled), and LeavesQty (151) = 0.
+If the request to cancel the order passed validation, then the PMX Platform will acknowledge the order cancellation with an ExecutionReport \[8] message indicating OrdStatus (39) = 4 (canceled), and LeavesQty (151) = 0.
 
 ### Figure 12: Successful cancelation of existing order
 
