--- a/getting-started/getting-access.mdx
+++ b/getting-started/getting-access.mdx
@@ -2,17 +2,17 @@
 title: "Requesting Access"
 ---
 
-The Polymarket USA API is **not currently open to the public**. Access is restricted and available only through an application process.
+The Polymarket Exchange API is **not currently open to the public**. Access is restricted and available only through an application process.
 
 ## API Access Restrictions
 
-Currently, the Polymarket USA API is in a **closed access** phase. This means:
+Currently, the Polymarket Exchange API is in a **closed access** phase. This means:
 - Trading and market data access requires explicit authorization
 - Rate limits and usage terms are determined on a case-by-case basis
 
 ## Applying for Access
 
-If you're interested in accessing the Polymarket USA API, you can express your interest and apply for access through our application process.
+If you're interested in accessing the Polymarket Exchange API, you can express your interest and apply for access through our application process.
 
 ### Application Requirements
 
@@ -38,4 +38,4 @@ After submitting your application:
 2. **Follow-up**: You may be contacted for additional information or clarification
 3. **Decision**: You'll be notified of the decision via email
 
-> **Important**: This page reflects the current status of Polymarket USA API access. Policies and availability may change. Please check back regularly for updates or contact our team directly for the most current information.
+> **Important**: This page reflects the current status of Polymarket Exchange API access. Policies and availability may change. Please check back regularly for updates or contact our team directly for the most current information.
