Clarified Polymarket and PMEX

--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,7 @@ title: "Welcome"
 mode: "center"
 ---
 
-This guide provides a comprehensive overview of the Polymarket Exchange's platform functionality, market structure, and API architecture. Please note that this documentation is specific to Polymarket US, which operates independently and differently from the global Polymarket platform.
+This guide provides a comprehensive overview of the Polymarket Exchange's platform functionality, market structure, and API architecture. Please note that this documentation is specific to the Polymarket Exchange, which operates independently and differently from the Polymarket International Platform and Polymarket US Trading Application.
 
 
 <Columns cols={2}>
