--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Polymarket US Changelog"
+title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
 <Update label="January 1999" description="v0.0.10">
-  Polymarket US API Made Public
+  Polymarket Exchange Documentation Released
 </Update>
