--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,6 @@ title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
-<Update label="January 1999" description="v0.0.10">
+<Update label="August 13, 2025" description="v0.0.10">
   Polymarket Exchange Documentation Released
 </Update>
