Jeff Message Fixes
Removed Quoting Stuff
Updated Banner
Updated Support Email
Clarified the ISV so we don't have to list them all
Removed case by case rate limits
Removed Bearer from Auth header
Revised changelog to indicate this is a draft

--- a/getting-started/getting-access.mdx
+++ b/getting-started/getting-access.mdx
@@ -6,9 +6,7 @@ The Polymarket Exchange API is **not currently open to the public**. Access is r
 
 ## API Access Restrictions
 
-Currently, the Polymarket Exchange API is in a **closed access** phase. This means:
-- Trading and market data access requires explicit authorization
-- Rate limits and usage terms are determined on a case-by-case basis
+Currently, the Polymarket Exchange API is in a **closed access** phase. This means that trading and market data access requires explicit authorization.
 
 ## Applying for Access
 
