--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,6 @@ title: "Polymarket Exchange Changelog"
 description: "API Updates and Announcements"
 mode: "center"
 ---
-<Update label="August 13, 2025" description="v0.0.10">
-  Polymarket Exchange Documentation Released
+<Update label="August 14, 2025" description="v0.0.10">
+  First DRAFT of Polymarket Exchange Documentation
 </Update>
